# RPi_Industrial_Edge_Device_Project

./: CMakeLists.txt  README.md  build_script.py  industrial_predictive_maintenance.md
docs/: hardware.md  industrial_predictive_maintenance.md  spi_driver.md
inc/: CMakeLists.txt  common_def.c  common_def.h
src/: CMakeLists.txt  main.c
src/apps/: CMakeLists.txt
src/apps/vib_sensor_acq/: vib_sensor_acq.c  vib_sensor_acq.h
src/drivers/: CMakeLists.txt
src/drivers/SPI/: spi_driver.c  spi_driver.h
src/sensors/: CMakeLists.txt
src/sensors/vibration/: vib_sensor.c  vib_sensor.h
src/utilities/: CMakeLists.txt
src/utilities/ring_buffer/: ring_buffer.c  ring_buffer.h
tests/: CMakeLists.txt  mock_syscalls.cpp  test_spi.cpp
tests/drivers/SPI/: test_spi.cpp
tests/sensors/vibration/: test_vib_sensor.cpp
